# lenskit-codex

./: 'dvc.yaml'  .dprint.json  .dvcignore  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  _brand.disabled.yml  _explorer.py  _quarto-prerender.yml  _quarto-static.yml  _quarto.yml  action.py  codex.toml  conda-lock.yml  config.toml  deno.json  dvc.cue  dvc.jsonnet  dvc.yaml  environment.yml  hk.pkl  index.md  index.qmd  justfile  lenskit-environment.yml  lenskit.toml  mise.toml  pipeline.tcl  pipeline.ts  pixi.toml  pyproject.toml  references.bib  render-pipeline.ts  styles.css  styles.scss  tasks.py  test.tcl
.dvc/: config
.github/workflows/: publish.yml
_freeze/: .gitignore
_freeze/eval-meta/: .gitignore
amazon/: import-az.py  index.md
amazon/2018/: categories.yml  dvc.jsonnet  dvc.yaml
amazon/2018-5core/: dvc.jsonnet
amazon/2023-5core/: .gitignore  az-bench-stats.sql  bench-stats.sql  categories.yml  category.tcl  datasets.yml  dvc.jsonnet  dvc.yaml  index.md  index.qmd  metric-views.sql  pipe-export.ts  pipe-runs.ts  pipe-scan.ts  pipe-sources.ts  pipeline.tcl  pipeline.ts
amazon/schemas/: benchmark.sql
bookcrossing/: .gitignore
codex/: __init__.py  cluster.py  collect.py  data.py  dbutil.py  display.py  dvc.ts  inference.py  measure.py  params.py  pipeline.py  rating_stat_views.sql  resources.py  results.py  runlog.py  stats.py  tables.py  training.py
codex/models/: Bias.py  BiasedMF_ALS.py  HPF.py  IKNN_Explicit.py  IKNN_Implicit.py  ImplicitMF_ALS.py  Implicit_BPR.py  Popular.py  UKNN_Explicit.py  UKNN_Implicit.py  __init__.py  iknn_explicit.py  iknn_implicit.py  model-list.ts
codex/splitting/: crossfold.py  spec.py
codex/tools/: __init__.py  duckscript.py  generate.py  sweep.py  test_measure.py  trec.py
eval-meta/: attention.qmd  index.md
hardware/: cruncher.md  index.md  mbp2.md  ranger.md  screamer.md
images/: .gitignore  screamer.jpg.dvc
manifests/: documents.json  models.json
mise/: config.deploy.toml  config.extra.toml  config.toml  task-functions.sh
mise/tasks/: fetch-web-assets.sh  render-site.sh  upload-web-assets.sh
models/: Bias.toml  BiasedMF-ALS.toml  BiasedMF_ALS.toml  HPF.toml  IKNN-Explicit.toml  IKNN-Implicit.toml  IKNN_Implicit.toml  Implicit-BPR.toml  ImplicitMF-ALS.toml  ImplicitMF_ALS.toml  Popular.toml  UKNN-Explicit.toml  UKNN-Implicit.toml  index.json
models/als-biased/: pipeline.toml  search.toml
models/als-implicit/: pipeline.toml  search.toml
models/bias/: pipeline.toml  search.toml
models/ease/: pipeline.toml  search.toml
models/flexmf-bpr/: pipeline.toml  search.toml
models/flexmf-explicit/: pipeline.toml  search.toml
models/flexmf-logistic/: pipeline.toml  search.toml
models/flexmf-warp/: info.toml  pipeline.toml  search.toml
models/iknn-explicit/: pipeline.toml  search.toml
models/iknn-implicit/: pipeline.toml  search.toml
models/lightgcn-bpr/: pipeline.toml  search.toml
models/lightgcn-logistic/: pipeline.toml  search.toml
models/slim/: info.toml  search.toml
models/slim-fs/: pipeline.toml  search.toml
models/uknn-explicit/: pipeline.toml
models/uknn-implicit/: pipeline.toml
movielens/: .gitignore  _ml_data.qmd  aggregate-ml.py  data.libsonnet  defs.tcl  dvc.jsonnet  dvc.yaml  import-ml.py  index.qmd  layout.libsonnet  meta.yml  ml-run-metrics.sql  ml-schema.sql  ml-stats.sql  ml-views.sql  pipe-run.ts  pipe-sweep.ts  pipeline.tcl  pipeline.ts  results.libsonnet  runs.libsonnet  sweeps.libsonnet
movielens/ML100K/: .gitignore  als-biased.qmd  als-biasedmf.qmd  als-implicit.qmd  als-implicitmf.qmd  bias.qmd  dataset.json  dataset.yml  description.qmd  dvc.jsonnet  dvc.yaml  flexmf-bpr.qmd  flexmf-explicit.qmd  flexmf-logistic.qmd  flexmf-warp.qmd  iknn-explicit.qmd  iknn-implicit.qmd  implicitmf.qmd  index.md  pipeline.tcl  summary.qmd  tuning.qmd  uknn-explicit.qmd  uknn-implicit.qmd
movielens/ML10M/: .gitignore  als-biased.qmd  als-biasedmf.qmd  als-implicit.qmd  als-implicitmf.qmd  bias.qmd  copydoc.toml  dataset.json  dataset.yml  description.qmd  dvc.jsonnet  dvc.yaml  flexmf-bpr.qmd  flexmf-explicit.qmd  flexmf-explicit.qmd.skip  flexmf-logistic.qmd  flexmf-warp.qmd  iknn-explicit.qmd  iknn-implicit.qmd  index.md  pipeline.tcl  splitting.qmd  summary.qmd  tuning.qmd  uknn-explicit.qmd  uknn-implicit.qmd
movielens/ML1M/: .gitignore  als-biased.qmd  als-biasedmf.qmd  als-implicit.qmd  als-implicitmf.qmd  bias.qmd  copydoc.toml  dataset.json  dataset.yml  description.qmd  dvc.jsonnet  dvc.yaml  flexmf-bpr.qmd  flexmf-explicit.qmd  flexmf-logistic.qmd  flexmf-warp.qmd  iknn-explicit.qmd  iknn-implicit.qmd  index.md  pipeline.tcl  run-list.txt  summary.qmd  tuning.qmd  uknn-explicit.qmd  uknn-implicit.qmd
movielens/ML20M/: .gitignore  als-biased.qmd  als-biasedmf.qmd  als-implicit.qmd  als-implicitmf.qmd  bias.qmd  copydoc.toml  dataset.json  dataset.yml  description.qmd  dvc.jsonnet  dvc.yaml  flexmf-bpr.qmd  flexmf-explicit.qmd  flexmf-logistic.qmd  flexmf-warp.qmd  iknn-explicit.qmd  iknn-implicit.qmd  index.md  ml-20m.zip.dvc  pipeline.tcl  splitting.qmd  summary.qmd  tuning.qmd
movielens/ML25M/: .gitignore  als-biased.qmd  als-biasedmf.qmd  als-implicit.qmd  als-implicitmf.qmd  bias.qmd  copydoc.toml  dataset.json  dataset.yml  description.qmd  dvc.jsonnet  dvc.yaml  flexmf-bpr.qmd  flexmf-explicit.qmd  flexmf-logistic.qmd  flexmf-warp.qmd  iknn-explicit.qmd  iknn-implicit.qmd  index.md  ml-25m.zip.dvc  pipeline.tcl  splitting.qmd  summary.qmd  tuning.qmd
movielens/ML32M/: .gitignore  als-biased.qmd  als-implicit.qmd  bias.qmd  copydoc.toml  dataset.json  dataset.yml  description.qmd  dvc.jsonnet  dvc.yaml  flexmf-bpr.qmd  flexmf-explicit.qmd  flexmf-warp.qmd  (+10 more)
run-log/: .gitignore
scripts/: copy-docs.ts  dbtest.tcl  duckdb-sql.py  generate.py  mkpipeline.tcl  parse-to-tcl.py  ray-cluster.sh  render-gitignore.ts  render-layout.py  render-pipeline.ts  split.py  sweep.py  update-gitignore.py  update-gitignore.tcl  update-id-cols.sql  upgrade-run-schema.sql
src/: codex.libsonnet  dvc.ts  lib.libsonnet  pipeline.tcl  pkgIndex.tcl
(+895 files in other folders)
