[build-system]
requires = ["hatchling ~=1.0"]
build-backend = "hatchling.build"

[project]
name = "lenskit-codex"
version = "0.1.0"
description = "LensKit run results"
authors = [{ name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" }]
requires-python = "==3.12.*"
dependencies = [
  "click ~=8.0",
  "invoke ~=2.2",
  "pydantic >=2.8,<3",
  "pyyaml ~=6.0",
  "humanize ~=4.0",
  "deepmerge >=2.0,<3",
  "glom ~=24.11",
  "requests >=2.32.3,<3",
  "pandas ~=2.1",
  "duckdb ~=1.2",
  "pyarrow >=16",
  "statsmodels ~=0.14.4",
  "distfit ~=1.8",
  "zstandard >=0.23",
  "plotnine ~=0.14.0",
  "matplotlib ~=3.6",
  "seaborn ~=0.13.2",
  "itables ~=2.2",
  "tabulate >=0.9",
  "notebook >=7",
  "dvc[webdav] ~=3.50",
  "quarto-cli ~=1.7",
]

[dependency-groups]
run = [
  "torch ~=2.7.0",
  "ray[tune] ~= 2.45",
  "optuna ~=4.0",
  "hyperopt ~=0.2.7",
  "numpy ~=2.0",
  "lenskit >=2025.3.0a3.dev290",
  # "lenskit @ git+https://github.com/mdekstrand/lkpy.git@feature/amazon-data",
]
dev = [
  "jsonnet ~=0.20.0",
  "jinja2 ~=3.1",
  "line_profiler ~=4.1; platform_machine != 'aarch64'",
  "ruff >=0.4",
  "ipython >=8",
  "jupyterlab >=3",
  "parquet-tools ~=0.2.16",
  "pre-commit ~= 4.0",
  { include-group = "run" },
  "visidata>=3.1.1",
  "pyarrow-stubs>=19.2",
  "py-spy>=0.4.0",
]

[tool.uv]
required-version = ">=0.7"
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
lenskit = [{ index = "lenskit" }]
# triton = [
#  { index = "pytorch-cuda", group = "cuda" },
# ]

[[tool.uv.index]]
name = "lenskit"
url = "https://pypi.lenskit.org/lenskit-dev/"
explicit = true

[[tool.uv.index]]
name = "lk-torch-cuda"
url = "https://pypi.lenskit.org/torch/cu128"

[project.entry-points."lenskit.cli.plugins"]
lenskit-codex = "codex.tools:codex"

[tool.hatch.build.targets.wheel]
packages = ["src/codex"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", "__pycache__", "build", "dist", "*/tests/*", ".pixi/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F403", "F405"]

[tool.pyright]
exclude = [".pixi/*", '.venv/*']
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
