[build-system]
requires = ["uv_build ~=0.8"]
build-backend = "uv_build"

[project]
name = "lenskit-codex"
version = "0.1.0"
description = "LensKit run results"
authors = [{ name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" }]
requires-python = "==3.14.*"
# we use Pixi to manage dependencies
dependencies = []

[tool.uv.build-backend]
module-name = "codex"

[tool.uv]
required-version = ">=0.7"
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
# lenskit = [{ index = "lenskit" }]
# triton = [
#  { index = "pytorch-cuda", group = "cuda" },
# ]

[[tool.uv.index]]
name = "lenskit"
url = "https://pypi.lenskit.org/lenskit-dev/"
explicit = true

[[tool.uv.index]]
name = "lk-torch-cuda"
url = "https://pypi.lenskit.org/torch/cu130"

[project.entry-points."lenskit.cli.plugins"]
lenskit-codex = "codex.tools:codex"

[tool.hatch.build.targets.wheel]
packages = ["src/codex"]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".git", "__pycache__", "build", "dist", "*/tests/*", ".pixi/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F403", "F405"]

[tool.pyright]
exclude = [".pixi/*", '.venv/*']
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
